# rules_cuda

./: .gitignore  README.md  WORKSPACE
cuda/: BUILD.bazel  action_names.bzl  common.bzl  cuda_toolchain_config.bzl  defs.bzl  providers.bzl  repository.bzl
cuda/private/rules/: utils.bzl
cuda/private/toolchain/: BUILD.linux  BUILD.windows  cuda_configure.bzl  cuda_configure_linux.bzl  cuda_configure_windows.bzl  lib_cuda_configure.bzl  local_cuda_config.bzl.tpl
docs/: README.md
docs/rules/: README.md
docs/toolchain/: README.md
examples/: WORKSPACE
examples/cuda_library/: BUILD.bazel  main.cpp  test.cu  test.h
examples/cuda_library/lib/: BUILD.bazel  sum.cu  sum.cuh
